added http response code message in exception proxy handling fixes to authentication and upload